# latex-mcp

./: .dockerignore  CITATION.cff  Dockerfile  README.md  pyproject.toml  server.json
.github/workflows/: release-docker.yml  release-pypi.yml
src/latex_mcp/: __init__.py
src/latex_mcp/cli/: __init__.py  _cli.py
src/latex_mcp/core/: __init__.py  command.py  compiler.py  types.py
src/latex_mcp/servers/: __init__.py  latex_mcp.py
