[project]
name = "latex-mcp"
version = "0.1.2"
description = "Enable AI agents to compile TeX files with LaTeX inside a Docker container."
readme = "README.md"
authors = [
    { name = "SongTan", email = "sepinetam@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.scripts]
latex-mcp = "latex_mcp:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
